{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "InGameMovement",
            "id": "bf206f8e-2059-4e15-b1de-3f0b58322593",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "d63f39fd-bd9a-4b53-8be0-794987be52ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "b47bdf35-21b7-4161-a64e-228dd7ea1c0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "cd0edc54-c3ff-40ee-bd2e-dace7bb75b0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "1a3f0bdb-77f8-40bf-b7ce-e018cb3b1ffb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ce0170c3-246c-46d5-964e-fbdc30f98055",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "647431f2-115f-4560-9805-e2313f77c934",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56e5e2af-dbaa-48ac-93d3-bc0ddbe5e537",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e68e3d7-c956-4382-b4a9-013d58106479",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "WeaponInteraction",
            "id": "5e18acb2-5bd8-438a-943f-3f6890f389e1",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "8510a99e-ee42-4b2a-a69a-c7d712441fec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "a0c333e1-6dd9-4f2f-ab25-4389066a8419",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ADS",
                    "type": "Button",
                    "id": "8a92b270-1a2d-49a5-910a-58da29acf324",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d239513-7eeb-4cd4-ac36-d27314bcaea8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "01744695-9664-401b-a8d7-d6f73484c72c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03455314-bbe2-493f-aef5-b27e2aad121f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ADS",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGameInteractable",
            "id": "e218cecc-b456-4722-b689-534404717172",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "ce602246-576f-4b29-bf08-5f9ac619d516",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4e3d6caf-16c7-4688-95b2-bce1095d195e",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InGameMisc",
            "id": "b29b96bd-d6c4-4dc6-ae01-00c6fabd6d58",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "e575f94b-2db5-498a-8e70-0c4cdc94b90d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc52c417-487e-4184-b746-0d52517eec76",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "InPauseMenu",
            "id": "2456fdc0-14ab-433f-a864-5695ed63b1b5",
            "actions": [
                {
                    "name": "UnpauseBack",
                    "type": "Button",
                    "id": "3c58e0a1-bda0-4758-900f-5f22b666e7d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48ca4654-faa5-4b4b-a3ed-ef57e0896da2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnpauseBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MainMenu",
            "id": "13ba4b34-ba8e-402f-9d9b-9b6407fe9da4",
            "actions": [
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "2128009f-365b-4378-aa9e-75c69c18b4a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a924ee5-eeb1-4937-8fc7-89ddc5fbc673",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}